--- a/style.css
+++ b/style.css
@@ -91,29 +91,27 @@ li {
     color: #00c1c1;
 }
 
-strong {
+li>a>strong {
     font-size: 18px;
 }
 
 #footer {
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 130px;
-    left: 0px;
-    top: 430px;
-    padding-bottom: 12px;
+    height: 120px;
     background: #EDFFBD;
 }
 
-#footer .container {
-    padding: 20px 40px;
+#footer .fcontainer {
+    margin: 12px 10px;
 }
 
-#footer .container p {
+#footer .fcontainer p {
     font-size: 12px;
 }
 
-#footer .container .col-md-3 {
+#footer .fcontainer {
     text-align: left;
     float: left;
 }
