--- a/assets/css/login_style.css
+++ b/assets/css/login_style.css
@@ -33,11 +33,17 @@
 input {
     border: 2px solid #F5E9EE;
     background-color: #F5E9EE;
-    border-radius: 8px;
+    border-radius: 5px;
     width: 330px;
     height: 50px;
     margin: 20px;
     padding-left: 5px;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .btn_submit,
@@ -65,7 +71,7 @@ input {
 }
 
 
-.img-pet {
+.img-pet-col-md-6 {
     position: absolute;
     background: url(header-pet-na-cabine.png);
 }
@@ -74,8 +80,10 @@ input {
     height: 250px;
 }
 
-/*
+.container {
+    position: absolute;
+    top: 30%;
+    left: 8%;  
+    align-content: center;
+}
 
-.container .formulario {
-    padding-top: 9%;
-}*/
