--- a/assets/css/signup_style.css
+++ b/assets/css/signup_style.css
@@ -1,33 +1,16 @@
-.acessar-conta,
-.img-pet {
+.cadastrar-conta {
     position: absolute;
-    padding-top: 5%;
+    padding-top: 33%;
 }
 
-.acessar-conta h4 {
+.cadastrar-conta h4 {
     text-align: center;
+    padding-bottom: 10px;
 }
 
-.acessar-conta p {
-    text-align: right;
-}
-
-.acessar-conta h4,
+.cadastrar-conta h4,
 .btn_submit {
     text-transform: uppercase;
-}
-
-.acessar-conta p {
-    text-transform: lowercase;
-    font-size: small;
-}
-
-.acessar-conta p a {
-    color: black;
-}
-
-.acessar-conta p a:hover {
-    color: rgb(50, 49, 49);
 }
 
 input {
@@ -36,14 +19,8 @@ input {
     border-radius: 5px;
     width: 330px;
     height: 50px;
-    margin: 20px;
+    margin: 10px;
     padding-left: 5px;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 }
 
 .btn_submit,
@@ -55,6 +32,8 @@ input {
 .btn_submit {
     background-color: #EDFFBD;
     border: 4px solid #D8FF6E;
+    margin: auto;
+    display: flex;
     border-radius: 30px;
     width: 120px;
     height: 50px;
@@ -62,6 +41,7 @@ input {
 
 .btn_submit[value] {
     font-weight: 300;
+    justify-content: center;
 }
 
 .btn_submit:hover {
@@ -70,20 +50,10 @@ input {
     cursor: pointer;
 }
 
-
-.img-pet {
-    position: absolute;
-    background: url(header-pet-na-cabine.png);
-}
-
-#pet-na-cabine {
-    height: 250px;
-}
-
 .container {
-    position: absolute;
-    top: 30%;
-    left: 8%;  
-    align-content: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
