--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@ body {
     font-family: 'Arimo', sans-serif;
 }
 
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 #header {
     background-color: #D8FF6E;
     height: 12%;
@@ -95,37 +101,23 @@ li {
 }
 
 li>a>strong {
-    font-size: 18px;
+    font-size: 24px;
 }
 
 #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 120px;
+    margin-top: auto;
     background: #EDFFBD;
     justify-content: center;
+    overflow: auto;
+    padding: 15px 70px 15px 70px;
 }
 
-
 #footer .fcontainer {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-    margin-left: 20px;
+    display: grid;
+    grid-template-columns: 25% 25% auto;
+    gap: 50px;
 }
 
 #footer .fcontainer p {
     font-size: 12px;
-}
-
-#footer .fcontainer .col {
-    margin: 15px;
-    margin-left: 50px;
-    margin-right: 50px;
-
-}
-
-#footer .fcontainer .ftitle {
-    margin-bottom: 10px;
 }
