--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -2,11 +2,11 @@
     align-items: center;
 }
 
-.cadastrar-conta {
+.sign-up {
     margin-top: 8%;
 }
 
-.cadastrar-conta h4 {
+.sign-up h4 {
     padding-bottom: 10px;
 }
 
