--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,21 +10,21 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
-    margin-bottom: 50px;
+    margin: 30px 0;
 }
 
 .cards-wrap .card-inner {
     background: #ffffff9a;
     border-radius: 20px;
-    min-width: 370px;
-    min-height: 250px;
-    width: 200px;
+    min-width: 300px;
+    min-height: 200px;
+    width: 300px;
     text-align: center;
 }
 
 .cards-wrap .card-item .card-inner img {
-    width: 370px;
-    height: 250px;
+    width: 300px;
+    height: 200px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -33,7 +33,7 @@
     padding: 15px;
 }
 
-.cards-wrap .card-item .card-inner  a {
+.cards-wrap .card-item .card-inner a {
     font-weight: bold;
     text-decoration: none;
     color: #000000;
