--- a/milestone2/public/assets/css/login.css
+++ b/milestone2/public/assets/css/login.css
@@ -22,19 +22,16 @@
 
 }
 
-.sign-in p a {
+.sign-in p a>strong {
     color: black;
+    font-size: 16px;
 }
 
 .sign-in p a:hover {
     color: rgb(50, 49, 49);
 }
 
-input {
-    margin: 10px;
-}
-
-.formulary>div>label {
+form>div>label {
     margin: 7% 5%;
 }
 
@@ -43,6 +40,6 @@ input {
     margin: auto;
 }
 
-.form-pet-logo {
+.pet-img img {
     width: 400px;
 }
