--- a/milestone2/public/assets/css/login_signup.css
+++ b/milestone2/public/assets/css/login_signup.css
@@ -22,18 +22,19 @@ input {
     width: 330px;
     height: 40px;
     padding-left: 5px;
+    margin: 10px auto;
 }
 
 input:focus {
     border-color: #cb5c7f;
 }
 
-.formulary>div {
+form>div {
     position: relative;
     padding-top: 2px;
 }
 
-.formulary>div>label {
+form>div>label {
     position: absolute;
     left: 0;
     font-size: small;
@@ -70,15 +71,17 @@ input:focus {
     border-radius: 30px;
     width: 120px;
     height: 50px;
-    text-align: center;
     margin: auto;
     display: flex;
 }
 
-.btn_submit[value] {
-    font-weight: 300;
+a.btn_submit {
+    text-decoration: none;
+    align-items: center;
     justify-content: center;
+    font-size: 14px;
 }
+
 
 .btn_submit:hover {
     background-color: #c0eb4c;
