pagina de cadastro funcionando

--- a/milestone1/assets/css/login_signup.css
+++ b/milestone1/assets/css/login_signup.css
@@ -48,7 +48,7 @@ input:not(:placeholder-shown)+label {
     transform: translateY(-1.8em) scale(0.9);
     transition: 0.3s;
     color: black;
-}*/
+}
 
 input::placeholder {
     color: transparent;
