--- a/milestone2/public/assets/css/login_signup.css
+++ b/milestone2/public/assets/css/login_signup.css
@@ -34,7 +34,7 @@ form>div {
     padding-top: 2px;
 }
 
-form>div>label {
+form>label {
     position: absolute;
     left: 0;
     font-size: small;
@@ -46,7 +46,7 @@ form>div>label {
 
 input:focus+label,
 input:not(:placeholder-shown)+label {
-    transform: translateY(-1.8em) scale(0.9);
+    transform: translateY(-1.7em) scale(0.9);
     transition: 0.3s;
     color: black;
 }
