--- a/milestone2/public/assets/css/signup.css
+++ b/milestone2/public/assets/css/signup.css
@@ -14,7 +14,24 @@ input {
     display: block;
 }
 
-.formulary>div>label {
-    margin: 5.5% 4%;
+.form-signup>label {
+    margin: -3.25% 38%;
 }
+
+/*.container {
+    align-items: center;
+}
+
+.sign-up {
+    margin-top: 2%;
+}
+
+.sign-up h4 {
+    padding-bottom: 10px;
+}
+
+/*input {
+    display: block;
+}*/
+
 
