--- a/milestone2/public/assets/css/style.css
+++ b/milestone2/public/assets/css/style.css
@@ -109,6 +109,14 @@ li>a>strong {
     font-size: 24px;
 }
 
+ h4 {
+    text-align: center;
+}
+
+h4 {
+    text-transform: uppercase;
+}
+
 #footer {
     margin-top: auto;
     background: #EDFFBD;
