--- a/milestone2/public/assets/css/button.css
+++ b/milestone2/public/assets/css/button.css
@@ -15,13 +15,13 @@
     align-items: center;
 }
 
-a.btn-submit {
+button.btn-submit {
     text-decoration: none;
     align-items: center;
     justify-content: center;
     font-size: 14px;
+    font-weight: bold;
 }
-
 
 .btn-submit:hover {
     background-color: #c0eb4c;
