--- a/milestone2/public/assets/css/forms.css
+++ b/milestone2/public/assets/css/forms.css
@@ -1,49 +1,39 @@
 .formulary {
-    margin-top: 2%;
+    margin: 2% auto;
 }
 
 .formulary h4 {
     padding-bottom: 10px;
 }
 
+.form-inputs {
+    position: relative;
+}
+
+.simple-input {
+    margin-bottom: 12px;
+}
+
+label {
+    margin: -0.7em 0.8em;
+    position: absolute;
+    font-size: small;
+    color: rgba(0, 0, 0, 0.7);
+    cursor: text;
+    background-color: #FAD2E1;
+}
+
 input {
-    display: block;
     border: 2px solid #F5E9EE;
     background-color: #FAD2E1;
     border-radius: 5px;
     width: 330px;
     height: 40px;
-    padding-left: 5px;
-    margin: 10px auto;
+    padding-left: 0.7em;
 }
 
 input:focus {
     border-color: #cb5c7f;
-}
-
-form>div {
-    position: relative;
-    padding-top: 2px;
-}
-
-form>label {
-    position: absolute;
-    font-size: small;
-    color: rgba(0, 0, 0, 0.4);
-    cursor: text;
-    transition: top 200ms ease-in, left 200 ease-in, font-size 200ms ease-in;
-    background-color: #FAD2E1;
-}
-
-.form-inputs>label {
-    margin: -3.25% 38%;
-}
-
-input:focus+label,
-input:not(:placeholder-shown)+label {
-    transform: translateY(-1.7em) scale(0.9);
-    transition: 0.3s;
-    color: black;
 }
 
 input::placeholder {
