--- a/milestone2/public/assets/css/forms.css
+++ b/milestone2/public/assets/css/forms.css
@@ -1,5 +1,5 @@
-.formulary {
-    margin-top: 2%;
+/* .formulary {
+    margin: 2% auto;
 }
 
 .formulary h4 {
@@ -44,6 +44,52 @@ input:not(:placeholder-shown)+label {
     transform: translateY(-1.7em) scale(0.9);
     transition: 0.3s;
     color: black;
+}
+
+input::placeholder {
+    color: transparent;
+}
+
+input:focus {
+    outline: none !important;
+} */
+
+.formulary {
+    margin: 2% auto;
+}
+
+.formulary h4 {
+    padding-bottom: 10px;
+}
+
+.form-inputs {
+    position: relative;
+}
+
+.simple-input {
+    margin-bottom: 12px;
+}
+
+label {
+    margin: -0.7em 0.8em;
+    position: absolute;
+    font-size: small;
+    color: rgba(0, 0, 0, 0.7);
+    cursor: text;
+    background-color: #FAD2E1;
+}
+
+input {
+    border: 2px solid #F5E9EE;
+    background-color: #FAD2E1;
+    border-radius: 5px;
+    width: 330px;
+    height: 40px;
+    padding-left: 0.7em;
+}
+
+input:focus {
+    border-color: #cb5c7f;
 }
 
 input::placeholder {
