--- a/milestone2/public/assets/css/style.css
+++ b/milestone2/public/assets/css/style.css
@@ -15,6 +15,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    scroll-behavior: smooth;
+    scroll-padding: 5px;
 }
 
 #header {
