--- a/milestone2/public/assets/css/forms.css
+++ b/milestone2/public/assets/css/forms.css
@@ -6,9 +6,10 @@
     padding-bottom: 10px;
 }
 
-.form-inputs {
+/*.form-inputs {
     position: relative;
-}
+    z-index: 2;
+}*/
 
 .simple-input {
     margin-bottom: 12px;
@@ -21,6 +22,7 @@ label {
     color: rgba(0, 0, 0, 0.7);
     cursor: text;
     background-color: #FAD2E1;
+    z-index: 0;
 }
 
 input {
