--- a/milestone2/public/assets/css/index.css
+++ b/milestone2/public/assets/css/index.css
@@ -47,9 +47,9 @@
 .cat-dog-image {
     display: flex;
     justify-content: center;
-    margin-bottom: -20px;
 }
 
 .cat-dog-image img {
-    width: 30%;
+    min-width: 250px;
+    max-width: 400px
 }
