--- a/milestone2/public/assets/css/style.css
+++ b/milestone2/public/assets/css/style.css
@@ -26,6 +26,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 2;
+    margin-bottom: 70px;
 }
 
 ul {
@@ -143,3 +144,40 @@ footer .fcontainer {
 footer .fcontainer p {
     font-size: 12px;
 }
+
+@media screen and (max-width: 600px) {
+    footer {
+        padding: 15px 30px 15px 30px;
+    }
+
+    .fcontainer {
+        display:block !important;
+    }
+
+    .col {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+/* scroll bars */
+
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #d8ff6e white;
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: white;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    border: 5px solid #d8ff6e;
+  }
