--- a/milestone2/public/assets/css/forms.css
+++ b/milestone2/public/assets/css/forms.css
@@ -1,17 +1,14 @@
 .formulary {
     margin: auto;
-    /* margin: 2% auto ? */
     margin-bottom: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
 
 .formulary h4 {
     padding-bottom: 10px;
 }
-
-/*.form-inputs {
-    position: relative;
-    z-index: 2;
-}*/
 
 .simple-input {
     margin-bottom: 12px;
