--- a/milestone2/public/assets/css/forms.css
+++ b/milestone2/public/assets/css/forms.css
@@ -44,3 +44,9 @@ input::placeholder {
 input:focus {
     outline: none !important;
 }
+
+@media only screen and (max-width: 550px) {
+    form input {
+        width: 100%;
+    }
+}
