--- a/milestone2/public/assets/css/style.css
+++ b/milestone2/public/assets/css/style.css
@@ -155,6 +155,13 @@ footer .fcontainer p {
     }
 }
 
+
+.page-title {
+    color: #000000;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
 /* scroll bars */
 
 /* Works on Firefox */
@@ -169,7 +176,7 @@ footer .fcontainer p {
 }
 
 *::-webkit-scrollbar-track {
-    background: white;
+    background: rgba(255, 255, 255, 0.349);
 }
 
 *::-webkit-scrollbar-thumb {
